--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header>
-        <h1>Relatório das redes sociais</h1>
+        <h1>Relatório dos alunos do terceiro ano</h1>
         <nav>
-            <a href="index.html">Mundo</a>
+            <a href="index.html">Casa</a>
             <a href="#">Minha escola</a>
         </nav>
     </header>
@@ -21,7 +21,7 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por Gui Lima</p>
+        <p>Desenvolvido por Quelen 3º ano</p>
     </footer>
     <script type="module" src="graficos/common.js"></script>
     <script type="module" src="graficos/informacoesGlobais.js"></script>
