--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <header>
-        <h1>Relatório dos alunos do terceiro ano</h1>
+        <h1>ℝ𝕖𝕝𝕒𝕥𝕠́𝕣𝕚𝕠 𝕕𝕠𝕤 𝕒𝕝𝕦𝕟𝕠𝕤 𝕕𝕠 𝕥𝕖𝕣𝕔𝕖𝕚𝕣𝕠 𝕒𝕟𝕠 ℂ𝕒𝕤𝕒 𝕄𝕚𝕟𝕙𝕒 𝕖𝕤𝕔𝕠𝕝𝕒</h1>
         <nav>
-            <a href="index.html">Casa</a>
-            <a href="#">Minha escola</a>
+            <a href="index.html">𝓬𝓪𝓼𝓪</a>
+            <a href="#">𝓶𝓲𝓷𝓱𝓪 𝓮𝓼𝓬𝓸𝓵𝓪</a>
         </nav>
     </header>
     <main class="graficos-section">
@@ -21,7 +21,7 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por Quelen 3º ano</p>
+        <p>𝖉𝖊𝖘𝖊𝖓𝖛𝖔𝖑𝖛𝖎𝖉𝖔 𝖕𝖔𝖗 𝕼𝖚𝖊𝖑𝖊𝖓 3º 𝖆𝖓𝖔</p>
     </footer>
     <script type="module" src="graficos/common.js"></script>
     <script type="module" src="graficos/informacoesGlobais.js"></script>
