--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>ℝ𝕖𝕝𝕒𝕥𝕠́𝕣𝕚𝕠 𝕕𝕠𝕤 𝕒𝕝𝕦𝕟𝕠𝕤 𝕕𝕠 𝕥𝕖𝕣𝕔𝕖𝕚𝕣𝕠 𝕒𝕟𝕠 ℂ𝕒𝕤𝕒 𝕄𝕚𝕟𝕙𝕒 𝕖𝕤𝕔𝕠𝕝𝕒</h1>
+        <h1>ℝ𝕖𝕝𝕒𝕥𝕠́𝕣𝕚𝕠 𝕕𝕠𝕤 𝕒𝕝𝕦𝕟𝕠𝕤 𝕕𝕠 𝕥𝕖𝕣𝕔𝕖𝕚𝕣𝕠 𝕒𝕟𝕠</h1>
         <nav>
             <a href="index.html">𝓬𝓪𝓼𝓪</a>
             <a href="#">𝓶𝓲𝓷𝓱𝓪 𝓮𝓼𝓬𝓸𝓵𝓪</a>
